tests/integration/enums/enum_missing_arm_error.june
// error: missing pattern match for None

enum State {
    None
    Some(i64)
}

fun main() {
    let x = State::Some(77)

    match x {
        State::Some(i) => println(i)
    }
}